<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.shutup.ffmpegcmdutils.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_the_video"/>
            <Button
                android:text="@string/select_video"
                android:id="@+id/BtnSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clip_the_video"/>
            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/editTextStartTime"
                android:hint="@string/starttime_in_seconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/editTextDuration"
                android:inputType="numberDecimal"
                android:hint="@string/duration_in_seconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/editTextSplitName"
                android:hint="@string/input_the_clipped_file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:text="@string/clip_video"
                android:id="@+id/BtnClip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concat_the_video"/>
            <Button
                android:id="@+id/BtnFirstItem"
                android:text="select the first item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/BtnSecondItem"
                android:text="select the second item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/editTextConcatName"
                android:hint="@string/input_the_concated_file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:text="@string/concat_video"
                android:id="@+id/BtnConcat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/BtnClean"
                android:text="clean the temp dir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
